refactor: GetRequestParser에서 예외가 발생했을 때 GeneralExcpetion을 발생시키도록 수정
기존에 원래 있던 예외를 발생시키던 것을 GeneralException을 발생시키도록 수정하였습니다.